<resources>
    <string name="app_name">截取图片</string>
    <string name="app_version">版本:xxx</string>
    <string name="app_build_time">编译时间:xxx</string>
    <string name="app_author">Created By Yili</string>
    <string name="app_info">一个快速截取图片的APP</string>
    <string name="app_note">本项目仅供学习与参考</string>
    <string name="button_test">测试选择</string>
    <string name="button_cut">开始裁剪</string>
    <string name="alias_select_picture">截取图片</string>
    <string name="note">请允许相关权限，否则将无法正常使用</string>
    <string name="if_is_huawei">由于华为系统的安全设置，您可能需要手动设置默认应用\n\n步骤:\n默认应用设置&#8212;>相机&#8212;>截取图片</string>
    <string name="if_is_oppo">由于Oppo系统的安全设置，您可能需要手动设置默认应用\n\n步骤:\n默认应用设置&#8212;>相机&#8212;>截取图片</string>
    <string name="if_is_vivo">由于Vivo系统的安全设置，您可能需要手动设置默认应用\n\n步骤:\n默认应用设置&#8212;>相机&#8212;>截取图片</string>

    <string name="action_clear">清理缓存</string>
    <string name="action_opensource">开源相关</string>
    <string name="action_about">关于</string>
    <string name="text_desc_title">说明文档</string>
    <string name="text_desc_1">这是一篇关于这个App使用方法的说明。</string>
    <string name="text_desc_2">1.在页面中点击需要上传文件的地方，选择“截图”或类似的选项：</string>
    <string name="text_desc_3">2.再选择“截取图片”：</string>
    <string name="text_desc_4">3.在这个界面你可以拍照或选择相册里的图片，如下图：</string>
    <string name="text_desc_5">3-1.如果你要从相册选择的话，请在类似下图这种界面选择图片：</string>
    <string name="text_desc_6">4.在这里，你可以调整图片大小，如图：</string>
    <string name="text_desc_7">5.这是最终的确定页面，若无误可以点击确定：</string>
</resources>
